js/js.translator/testData/incremental/invalidation/moveExternalDeclarationsBetweenJsModules/main/m.kt
fun box(stepId: Int): String {
    konst x = testFunction()
    if (x != stepId) {
        return "Fail: $x != $stepId"
    }
    return "OK"
}
